# azas-tower

./: .gitignore  README.md  package.json
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/public/assets/: manifest.json
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/assets/maps/: map-1.json
frontend/src/assets/tilesets/: animated-tileset.json  background-tileset.json  character-tileset.json  isometric-tileset.json  walkable-tileset.json
frontend/src/lib/classes/: custom-viewport.ts  debug-overlay.ts  entity.ts  game-console.ts  map-tile.tsx  move-indicator.ts  perfect-sprite.ts  player.ts  server.ts  socket.ts  world-tile.ts  world.ts
frontend/src/lib/components/: background-sprite.tsx  background.tsx  move-indicator.tsx  player-character.tsx  viewport.tsx
frontend/src/lib/functions/: find-path.ts  get-background-texture.ts  (+13 more)
server/: .gitignore  Cargo.toml
server/bindings/: ClientMessage.ts  ClientSyncPacket.ts  ConnectionId.ts  GameEntity.ts  GameEntityBundle.ts  GameEntityType.ts  GameState.ts  IsOnline.ts  MessageAuthorType.ts  Player.ts  PlayerBundle.ts  ServerMessage.ts  index.ts  server.ts
server/src/: handler.rs  main.rs  plugin.rs  socket.rs  state.rs  user.rs  utility.rs
server/src/ecs/: _component.rs  bundle.rs  component.rs  mod.rs  resource.rs  system.rs
server/src/ecs/component/: marker.rs  mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  typeshare.toml  vite.config.ts
web/public/assets/: manifest.json
web/src/: app.module.css  main.tsx
(+49 files in other folders)
