[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
axum = "0.8.8"
rmpv = { version = "1.3.1", features = ["with-serde"] }
socketioxide = { version = "0.18.1", features = ["msgpack", "state"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.4.0"
tower = "0.5.3"
serde = { version = "1.0", features = ["derive", "rc"] }
chron = "0.1.6"
bevy_ecs = "0.18.0"
